# unimodpy

./: .gitignore  HISTORY.md  LICENSE  MANIFEST.in  README.md  justfile  pyproject.toml  requirements.txt  vercel.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  release.yml
api/: index.py
docs/: index.html
scripts/: audit_obo.py  export_json.py  print_entries.py
src/unimodpy/: __init__.py  _download.py  _formula.py  _obo_writer.py  _tabular.py  database.py  models.py  parser.py
src/unimodpy/server/: __init__.py  app.py  dashboard.py  models.py  references.py  schemas.py
tests/: conftest.py  test_basic.py  test_find.py  test_obo_writer.py  test_server.py  test_tabular.py  test_unimod.py
