[project]
name = "unimodpy"
version = "0.1.0"
description = "Python library for parsing and querying the UNIMOD mass spectrometry modifications database."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = "MIT"
authors = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
maintainers = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
keywords = ["unimod", "proteomics", "mass spectrometry", "modifications", "OBO", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/tacular-omics/unimodpy"
Repository = "https://github.com/tacular-omics/unimodpy"
Issues = "https://github.com/tacular-omics/unimodpy/issues"
Changelog = "https://github.com/tacular-omics/unimodpy/blob/main/HISTORY.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unimodpy"]
artifacts = ["src/unimodpy/data/UNIMOD.obo"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]

